--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         }
 
         async function updateJsonFile(data) {
-            const token = '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';
+            const token = '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';
 
             const response = await fetch('https://api.github.com/repos/haque023/dailyCost/contents/data.json', {
                 method: 'PUT',
@@ -139,6 +139,38 @@
             const data = await response.json();
             return data.sha;
         }
+        async function loadTableData() {
+       try {
+        const response = await fetch('https://raw.githubusercontent.com/haque023/dailyCost/main/data.json');
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+        const data = await response.json();
+        populateTable(data);
+    } catch (error) {
+        console.error('Error fetching data:', error);
+    }
+}
+
+function populateTable(data) {
+    console.log(data)
+    const tableBody = document.getElementById('costTableBody');
+    tableBody.innerHTML = '';
+
+    data.forEach((item, index) => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+            <td>${index + 1}</td>
+            <td>${item.costType}</td>
+            <td>${item.remarks}</td>
+            <td>${item.amount}</td>
+            <td>${item.date}</td>
+        `;
+        tableBody.appendChild(row);
+    });
+}
+window.onload = loadTableData;
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
