--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
             if (costType && remarks && amount && date) {
                 addRowToTable(costType, remarks, amount, date);
 
-                const newEntry = {
+                const newEntry = [{
                     costType: costType,
                     remarks: remarks,
                     amount: amount,
                     date: date
-                };
+                }];
                 costData.push(newEntry);
 
-                updateJsonFile(costData);
+                updateJsonFile(newEntry); // Pass only the new entry
 
                 document.getElementById("remarks").value = '';
                 document.getElementById("amount").value = '';
@@ -113,8 +113,16 @@
             tableBody.appendChild(newRow);
         }
 
-        async function updateJsonFile(data) {
-            const token = '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';
+        async function updateJsonFile(newData) {
+            const token = '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'; // Replace with your actual token
+
+            // Fetch the existing data first
+            const currentResponse = await fetch('https://api.github.com/repos/haque023/dailyCost/contents/data.json');
+            const currentData = await currentResponse.json();
+            const existingContent = JSON.parse(atob(currentData.content));
+
+            // Append the new data to the existing data
+            const updatedData = [...existingContent, ...newData];
 
             const response = await fetch('https://api.github.com/repos/haque023/dailyCost/contents/data.json', {
                 method: 'PUT',
@@ -124,53 +132,17 @@
                 },
                 body: JSON.stringify({
                     message: "Updated cost data",
-                    content: btoa(JSON.stringify(data, null, 2)),
-                    sha: await getFileSha()
+                    content: btoa(JSON.stringify(updatedData, null, 2)), // Base64 encode the updated data
+                    sha: currentData.sha // Use the SHA from the current file version
                 })
             });
 
             if (!response.ok) {
                 alert("Error saving data!");
+            } else {
+                alert("Data saved successfully!");
             }
         }
-
-        async function getFileSha() {
-            const response = await fetch('https://api.github.com/repos/haque023/dailyCost/contents/data.json');
-            const data = await response.json();
-            return data.sha;
-        }
-        async function loadTableData() {
-       try {
-        const response = await fetch('https://raw.githubusercontent.com/haque023/dailyCost/main/data.json');
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
-        }
-        const data = await response.json();
-        populateTable(data);
-    } catch (error) {
-        console.error('Error fetching data:', error);
-    }
-}
-
-function populateTable(data) {
-    console.log(data)
-    const tableBody = document.getElementById('costTableBody');
-    tableBody.innerHTML = '';
-
-    data.forEach((item, index) => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-            <td>${index + 1}</td>
-            <td>${item.costType}</td>
-            <td>${item.remarks}</td>
-            <td>${item.amount}</td>
-            <td>${item.date}</td>
-        `;
-        tableBody.appendChild(row);
-    });
-}
-window.onload = loadTableData;
-
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
